[package]
authors = ["Kai Lüke <kailueke@riseup.net>"]
license = "MIT"
name = "usnetd"
version = "0.1.0"

[lib]
name = "libusnetd"
path = "src/lib.rs"

[[bin]]
name = "usnetd"
path = "src/main.rs"

[dependencies]
byteorder = {version = "1.0", default-features = false}
clap = "2.31.2"
ctrlc = {version = "3.0", features = ["termination"]}
dotenv = {git = "https://github.com/apiraino/rust-dotenv", rev = "5cfd95025b8e38de76937cfca525562115396ae2"}
env_logger = "0.8.3"
hashbrown = "0.9"
lazy_static = "1.1.0"
log = {version = "0.4.0", features = ["release_max_level_debug"]}
nix = "0.20.0"
serde = "1.0.53"
serde_derive = "1.0.53"
serde_json = "1.0.17"
smoltcp = "0.7"
usnet_devices = {path = "../usnet_devices"}

[features]
default = []
netmap = ["usnet_devices/netmap"]
pcap = []

[profile.release]
codegen-units = 1
lto = true
